qa/apps/docs/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: docs
  name: docs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      imagePullSecrets:
      - name: images-pull
      containers:
      - image: index.docker.io/ferlabcrsj/cqdg-docs:9862663af81418be2b40dc68ef432f9492923316-1666099884 # {"$imagepolicy": "cqdg-qa-fluxcd:docs"}
        name: docs
        resources:
          requests:
            memory: "256Mi"
            cpu: '0.25'
          limits:
            memory: "512Mi"
            cpu: '0.5'
