qa/apps/docs/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: docs
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - docs.qa.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: docs.qa.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: docs
            servicePort: 8080
